<resources>
    <string name="app_name">登陆与注册</string>
    <string name="name">姓名：</string>
    <string name="name2">Name</string>
    <string name="code">密码：</string>
    <string name="please_enter_your_code">Code</string>
    <string name="login">登录</string>
    <string name="cancel">取消</string>
    <string name="Login">登录</string>
    <string name="Register">注册</string>
    <string name="phone">手机：</string>
    <string name="phone_number">Phone number</string>
    <string name="register1">注册</string>
    <string name="text1">没有账号？点我注册</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
</resources>
